--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -49,6 +50,9 @@ dependencies {
     implementation "com.github.ibrahimsn98:SmoothBottomBar:1.7.6"
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
