--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoFinder"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.detail.DetailUserActivity"></activity>
-        <activity android:name=".ui.splash.SplashActivity" />
-        <activity android:name=".ui.main.MainActivity">
+        <activity android:name=".ui.personality.PersonalityActivity" />
+        <activity android:name=".ui.detail.DetailUserActivity" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:theme="@style/Theme.CoFinder.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.main.MainActivity" />
     </application>
 
 </manifest>
